...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_hero_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/horizontal_small_margin"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
...
